# components

./: .gitignore  README.md  build_arrow.bat  build_awssdk.bat  build_boost.bat  build_boost.sh  build_duckdb.bat  build_expat.bat  build_expat.sh  build_googletest.bat  build_googletest.sh  build_grpc.bat  build_matplotplusplus.bat  build_minio.bat  build_opencv.bat  build_openxlsx.bat  build_paho_mqtt_c.bat  build_protobuf.bat  build_sfml.bat  build_sqlite3.bat  build_wxwidgets.bat  build_wxwidgets.sh  build_zlib.bat  build_zlib.sh
sqlite3/: CMakeLists.txt
